--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-.spinner-border {
+/* .spinner-border {
     display: none;
     margin-top: 20px;
-  }
+  } */
   
   .footer {
     margin-top: 20px;
